test/negative/306_unknown_type.err
306_unknown_type.fx:2:6: error: the appropriate match for 'nosuch_t' is not found
306_unknown_type.fx:3:9: error: the appropriate match for 'x' of type '<unknown>' is not found.

2 errors occured during type checking.
